<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">3eesho</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="et_userName">Raj Singh</string>
    <string name="et_User_Profession">Software Engg</string>
    <string name="et_user_location">San Francisco, CA</string>
    <string name="iv_UserProfile_Image_contentdescription">User Profile Image</string>
    <string name="tv_userProfileEmailLabel">Email:</string>
    <string name="tv_userProfilePhoneLabel">Phone:</string>
    <string name="tv_genderlabel">Gender</string>
    <string name="hint_gender">Gender</string>
    <string name="tv_userWeightLabel">Weight:</string>
    <string name="tv_userHeightLabel">Height</string>
    <string name="tv_userDietHabitLabel">Diet Habit:</string>
    <string name="tv_userProfileTargetLabel">Target:</string>
    <string name="tv_userProfileTargetDateLabel">"Target date to achieve the goal "</string>
    <string name="hint_phonenumber">1234567890</string>
    <string name="tv_usertargetgoal">Loose 10 kg in 3 months</string>
    <string name="title_activity_home">3eesho</string>
    <string name="hint_diethabit">Veg/Non-Veg</string>
    <string name="hint_email">sam@gmail.com</string>
    <string name="tvTimeSpend">30hrs</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_user_goal">UserGoalActivity</string>
    <string name="title_activity_user_metrics">UserMetricsActivity</string>
    <string name="weightHint">Enter Weight</string>
    <string name="dot_label">.</string>
    <string name="lb_label">lb</string>
    <string name="singlequot_label">\'</string>
    <string name="doublequot_label">\"</string>
    <string name="tvName">Name</string>
    <string name="btnLabel_SelectTrainer">Select Trainer</string>
    <string name="label_Description">Description</string>
    <string name="tvLabel_ExpertIn">ExpertIn:</string>
    <string name="et_expertDescText">"Hi I am Trainer in body building. I love to help people who want to loose weight. "</string>
    <string name="et_ExpertInDesc">Dietitian, Fitness Expert</string>
    <string name="title_activity_expert_home">ExpertHomeActivity</string>
    <string name="title_activity_edit_plan">EditPlanActivity</string>
    <string name="title_activity_start">3eesho</string>

    <string-array name="weight_units">
        <item>LB</item>
        <item>KB</item>
    </string-array>
    <string-array name="time_units">
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
    <string-array name="height_units">
        <item>Inch</item>
        <item>CM</item>
    </string-array>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="tv_EditProfileLabel">Edit Profile</string>
    <string name="hint_profile_age">Age</string>
    <string name="hint_height">Height</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_activity">Activity</string>
    <string name="rd_highActivity">High Activity</string>
    <string name="rd_lowActivity">Low Activity</string>
    <string name="Dialog_btn_ok">OK</string>
    <string name="rd_mediumActivity">Medium Activity</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="title_activity_run_target">RunTargetActivity</string>
    <string name="title_activity_weight_target">WeightTargetActivity</string>
    <string name="title_activity_diet_plan">DietPlanActivity</string>
    <string name="title_activity_shout">ShoutActivity</string>
    <string name="title_activity_social_profile">SocialProfileActivity</string>
    <string name="tv_user_Target">Target</string>
    <string name="hint_targetTxt">"Target "</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="tv_likes">LIKES</string>
    <string name="tv_activity">ACTIVITY</string>
    <string name="tv_weight">WEIGHT</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
</resources>
