<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llMyTrainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>

    <TextView
        android:id="@+id/tvchooseTrainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llMyTrainer"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:gravity="center"
        android:text="Choose Trainer" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvchooseTrainer"
        android:layout_marginTop="44dp" >

        <ImageView
            android:id="@+id/ivSenderImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="TrainerImage" />

        <TextView
            android:id="@+id/tvChooseTrainerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/tvName" >
        </TextView>
		
		<LinearLayout 
    	android:id="@+id/llRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tvChooseTrainerName"
        android:layout_alignLeft="@+id/tvChooseTrainerName">
        
        <TextView
            android:id="@+id/trainerRating"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="Rating" >
        </TextView>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="4"
            android:rating="2.0"
            android:stepSize="1.0" />

        </LinearLayout>
        
    </RelativeLayout>

    <Button
        android:id="@+id/btnSelectTrainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="20dp"
        android:text="@string/btnLabel_SelectTrainer" />

    <LinearLayout
        android:id="@+id/ll_TrainerDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnSelectTrainer"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvLabel_myTrainerDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_Description"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
             />

        <TextView
            android:id="@+id/etMyTrainerDescription"
            android:layout_width="204dp"
            android:layout_height="81dp"
            android:hint="@string/et_expertDescText"
            android:layout_marginRight="10dp" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/ll_ExpertIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ll_TrainerDesc"
        android:layout_marginTop="16dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvLabel_myExpertIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvLabel_ExpertIn"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/etMyExpertIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/et_ExpertInDesc"
             />

        
    </LinearLayout>

</RelativeLayout>
