<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
	tools:context="${relativePackage}.${activityClass}"
    >

    <LinearLayout
        android:id="@+id/lvprofile_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/profile_bg"
        android:gravity="center"
        android:orientation="vertical" >
        
        <com.codepath.eesho.utils.CircularImageView
     		android:id="@+id/ivSenderImage"
       		android:layout_width="90dp"
        	android:layout_height="90dp"
        	android:layout_marginTop="10dp"
        	android:contentDescription="@string/iv_UserProfile_Image_contentdescription"
        	android:src="@drawable/buzz2" />
        
        <TextView
            android:id="@+id/tv_userProfilename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_userName"
            android:inputType="text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/etuserProfileLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.65"
            android:background="@android:color/transparent"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_user_location"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/tv_editProfile_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lvprofile_image"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_EditProfileLabel"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <TextView
        android:id="@+id/tv_profileage"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_editProfile_label"
        android:layout_toRightOf="@+id/icon_profile_age"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/hint_profile_age" />

    <View
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="780dp"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/tv_profileage"
        android:layout_alignRight="@+id/tv_profileage"
        android:layout_below="@+id/tv_profileage"
        android:layout_centerVertical="true" 
        android:background="#000000"
        android:alpha="0.12"/>

    <TextView
        android:id="@+id/tv_profile_gender"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/progressBar1"
        android:layout_below="@+id/progressBar1"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/hint_gender" />

    <View
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/tv_profile_gender"
        android:layout_alignRight="@+id/tv_profile_gender"
        android:layout_below="@+id/tv_profile_gender"
        android:background="#000000"
        android:alpha="0.12" />

    <TextView
        android:id="@+id/tv_profile_height"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progressBar2"
        android:layout_alignRight="@+id/progressBar2"
        android:layout_below="@+id/progressBar2"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/hint_height" />

    <View
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/tv_profile_height"
        android:layout_alignRight="@+id/tv_profile_height"
        android:layout_below="@+id/tv_profile_height"
        android:background="#000000"
        android:alpha="0.12" />

    <TextView
        android:id="@+id/tv_profile_weight"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progressBar3"
        android:layout_alignRight="@+id/progressBar3"
        android:layout_below="@+id/progressBar3"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/hint_weight" />

    <View
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/tv_profile_weight"
        android:layout_alignRight="@+id/tv_profile_weight"
        android:layout_below="@+id/tv_profile_weight"
        android:background="#000000"
        android:alpha="0.12" />

    <TextView
        android:id="@+id/tv_profile_activity"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progressBar4"
        android:layout_alignRight="@+id/progressBar4"
        android:layout_below="@+id/progressBar4"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/hint_activity" />

    <View
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/tv_profile_activity"
        android:layout_alignRight="@+id/tv_profile_activity"
        android:layout_below="@+id/tv_profile_activity"
        android:background="#000000"
        android:alpha="0.12" />
    
    <ImageView
        android:id="@+id/icon_profile_age"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="-8dp"
        android:scaleType="fitXY"
        android:layout_alignLeft="@+id/tv_editProfile_label"
        android:layout_alignTop="@id/tv_profileage"
        android:src="@drawable/icon_age_active"
        android:contentDescription="@string/iv_UserProfile_Image_contentdescription" />
    
    <ImageView
        android:id="@+id/icon_gender_image"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:scaleType="fitXY"
        android:layout_marginTop="-8dp"
        android:layout_alignLeft="@+id/tv_editProfile_label"
        android:layout_alignTop="@id/tv_profile_gender"
        android:src="@drawable/icon_gender_active"
        android:contentDescription="@string/iv_UserProfile_Image_contentdescription" />
    
    <ImageView
        android:id="@+id/icon_profile_height"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:scaleType="fitXY"
        android:layout_marginTop="-8dp"
        android:layout_alignLeft="@+id/tv_editProfile_label"
        android:layout_alignTop="@id/tv_profile_height"
        android:src="@drawable/icon_height_active"
        android:contentDescription="@string/iv_UserProfile_Image_contentdescription" />
    
    <ImageView
        android:id="@+id/icon_profile_weight"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:scaleType="fitXY"
        android:layout_marginTop="-8dp"
        android:layout_alignLeft="@+id/tv_editProfile_label"
        android:layout_alignTop="@id/tv_profile_weight"
        android:src="@drawable/icon_weight_active"
        android:contentDescription="@string/iv_UserProfile_Image_contentdescription" />
    
     <ImageView
        android:id="@+id/icon_profile_activity"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:scaleType="fitXY"
        android:layout_marginTop="-8dp"
        android:layout_alignLeft="@+id/tv_editProfile_label"
        android:layout_alignTop="@id/tv_profile_activity"
        android:src="@drawable/icon_activity_active"
        android:contentDescription="@string/iv_UserProfile_Image_contentdescription" />

    </RelativeLayout>
