<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
	tools:context="${relativePackage}.${activityClass}"
    >

    <LinearLayout
        android:id="@+id/lv_socialprofile_image"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="#506f7b"
        android:gravity="center"
        android:orientation="vertical" >
        
        <com.codepath.eesho.utils.CircularImageView
     		android:id="@+id/ivsocialprofileImage"
       		android:layout_width="80dp"
        	android:layout_height="80dp"
        	android:layout_marginTop="20dp"
        	android:contentDescription="@string/iv_UserProfile_Image_contentdescription"
        	android:src="@drawable/buzz2" />
        
        <EditText
            android:id="@+id/tv_userSocialProfilename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_userName"
            android:inputType="text"
            android:textSize="24sp" />

        <EditText
         	android:id="@+id/etuserSocialProfileLocation"
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:ems="10"
         	android:gravity="center"
         	android:hint="@string/et_user_location"
         	android:inputType="text"
         	android:background="@android:color/transparent"
         	android:textColor="@android:color/white"
         	android:textSize="16sp"
          />
        
    </LinearLayout>
    
    <LinearLayout
        android:background="#546E7A"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        
        android:showDividers="middle"
        android:layout_below="@+id/lv_socialprofile_image">
        
        <LinearLayout
            android:id="@+id/llProgress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="openProgress" >
            
   			<RelativeLayout
                android:layout_width="90dp"
            	android:layout_height="match_parent"
            	android:layout_gravity="center">
            	
            	<ImageView
		            android:id="@+id/ivGraph"
		            android:layout_width="40dp"
		            android:layout_height="40dp"
		            android:src="@drawable/ic_bargraph" 
		            android:layout_centerVertical="true"/>

            	<TextView
            	    android:id="@+id/tvProgress"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_alignBottom="@+id/ivGraph"
            	    android:layout_marginBottom="7dp"
            	    android:text="88"
            	    android:layout_toRightOf="@+id/ivGraph"
            	    android:textSize="24sp"
            	    android:textColor="#FFFFFF" 
            	    android:layout_centerVertical="true"/>
            	
            	<TextView
            	    android:id="@+id/tvProgressTxt"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:text="PROGRESS"
            	    android:layout_below="@+id/tvProgress"
            	    android:layout_centerVertical="true"
            	    android:layout_centerHorizontal="true"
            	    android:textSize="10sp" 
            	    android:textColor="#FFF"/>
            	
            </RelativeLayout>         
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:onClick="goToActivityHistory" >

            <RelativeLayout
                android:layout_width="90dp"
            	android:layout_height="match_parent"
            	android:layout_gravity="center">
            	
            	<ImageView
		            android:id="@+id/ivActivity"
		            android:layout_width="40dp"
		            android:layout_height="40dp"
		            android:src="@drawable/ic_activity" 
		            android:layout_centerVertical="true"/>

            	<TextView
            	    android:id="@+id/tvActivity"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_alignBottom="@+id/ivActivity"
            	    android:text="60"
            	    android:layout_toRightOf="@+id/ivActivity"
            	    android:textSize="24sp"
            	    android:textColor="#FFFFFF"
            	    android:layout_marginBottom="7sp" 
            	    android:layout_centerVertical="true"/>
            	
            	<TextView
            	    android:id="@+id/tvActivityText"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:text="ACTIVITY"
            	    android:layout_below="@+id/tvActivity"
            	    android:layout_centerVertical="true"
            	    android:layout_centerHorizontal="true"
            	    android:textSize="10sp" 
            	    android:textColor="#FFF"/>
            </RelativeLayout>    
        </LinearLayout>
    </LinearLayout>

    
    </RelativeLayout>
